@@ -55,5 +55,6 @@ void toggleStatusBar(GtkWidget* widget,gpointer data);
 void updateStatuBar(GtkTextBuffer* textbuffer,GtkTextIter* location,GtkTextMark* mark,gpointer data);
 void toggleDocviewer(GtkWidget* widget,gpointer data);
 void closeDocViewer(GtkWidget *widget,GdkEvent *event,gpointer data);
+void getPlugins(GtkWidget* widget,gpointer data);
 
 #endif
